[project]
name = "finalproject-konanov-m25-555"
version = "0.1.0"
description = "MEPhI Python final project"
authors = [
    {name = "Sergey Konanov",email = "seregakonanov@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prettytable (>=3.17.0,<4.0.0)"
]


[tool.poetry]
packages = [
    {include = "valutatrade_hub"},
]

[tool.poetry.scripts]
valutatrade = "main:main" 


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["venv", ".venv", "dist", "__pycache__"]


[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []